[package]
name = "cupiddb"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "net",
    "io-util",
    "time"
]}
tokio-util = "0.7.11"
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
dashmap = { version = "6.0.1", default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.118" }
arrow = { version = "53.0.0", default-features = false, features = [
    "ipc"
]}
rayon = { version = "1.10.0", default-features = false }
mimalloc = "0.1.43"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
